# breakpaddemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: local-crash.cpp
app/src/main/java/: com_swangq_com_suanfa_BreakpadActivity.h
app/src/main/java/com/swangq/com/suanfa/: BreakpadActivity.java  MainActivity.java  Test.java
app/src/main/res/layout/: activity_main.xml  dialog_progress.xml
app/src/main/res/values/: strings.xml
breakpad-build/src/main/java/com/sample/breakpad/: BreakpadInit.java
gradle/wrapper/: gradle-wrapper.properties
